cealdemo/tests/neg1/145.gold
Error: ('145b.inc' line 1:5 '.') Unexpected token in file '145b.inc'
