cealdemo/tests/neg1/145.sct
.pragma N=77
.include "145a.inc"

